--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@babel/core": "^7.20.7",
     "@babel/node": "^7.20.7",
     "@babel/preset-env": "^7.20.2",
+    "@prettier/plugin-pug": "^2.4.1",
     "nodemon": "^2.0.20"
   }
 }
