--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "url": "git+https://github.com/kisyam/wetube-reloaded.git"
   },
   "scripts": {
-    "dev": "nodemon --exec babel-node src/init.js",
-    "assets": "webpack --config webpack.config.js"
+    "dev:server": "nodemon",
+    "dev:assets": "webpack"
   },
   "author": "Nicolas",
   "license": "MIT",
@@ -35,6 +35,7 @@
     "@prettier/plugin-pug": "^2.4.1",
     "babel-loader": "^9.1.2",
     "css-loader": "^6.7.3",
+    "mini-css-extract-plugin": "^2.7.2",
     "nodemon": "^2.0.20",
     "sass": "^1.58.0",
     "sass-loader": "^13.2.0",
