--- a/package.json
+++ b/package.json
@@ -1,49 +1,54 @@
 {
-  "name": "wetube",
-  "version": "1.0.0",
-  "description": "The best way to watch a videos.",
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/kisyam/wetube-reloaded.git"
-  },
-  "scripts": {
-    "dev:server": "nodemon",
-    "dev:assets": "webpack"
-  },
-  "author": "Nicolas",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/kisyam/wetube-reloaded/issues"
-  },
-  "homepage": "https://github.com/kisyam/wetube-reloaded#readme",
-  "dependencies": {
-    "@ffmpeg/core": "^0.11.0",
-    "@ffmpeg/ffmpeg": "^0.11.6",
-    "bcrypt": "^5.1.0",
-    "connect-mongo": "^4.6.0",
-    "dotenv": "^16.0.3",
-    "express": "^4.18.2",
-    "express-flash": "^0.0.2",
-    "express-session": "^1.17.3",
-    "mongoose": "^6.8.4",
-    "morgan": "^1.10.0",
-    "multer": "^1.4.5-lts.1",
-    "node-fetch": "^2.6.1",
-    "pug": "^3.0.2",
-    "regenerator-runtime": "^0.13.11"
-  },
-  "devDependencies": {
-    "@babel/core": "^7.20.7",
-    "@babel/node": "^7.20.7",
-    "@babel/preset-env": "^7.20.2",
-    "babel-loader": "^9.1.2",
-    "css-loader": "^6.7.3",
-    "mini-css-extract-plugin": "^2.7.2",
-    "nodemon": "^2.0.20",
-    "sass": "^1.58.0",
-    "sass-loader": "^13.2.0",
-    "style-loader": "^3.3.1",
-    "webpack": "^5.75.0",
-    "webpack-cli": "^5.0.1"
-  }
+    "name": "wetube",
+    "version": "1.0.0",
+    "description": "The best way to watch a videos.",
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/kisyam/wetube-reloaded.git"
+    },
+    "scripts": {
+        "start": "node build/init.js",
+        "build": "npm run build:server && npm run build:assets",
+        "build:server": "babel src -d build",
+        "build:assets": "webpack --mode=production",
+        "dev:server": "nodemon",
+        "dev:assets": "webpack --mode=development -w"
+    },
+    "author": "Nicolas",
+    "license": "MIT",
+    "bugs": {
+        "url": "https://github.com/kisyam/wetube-reloaded/issues"
+    },
+    "homepage": "https://github.com/kisyam/wetube-reloaded#readme",
+    "dependencies": {
+        "@ffmpeg/core": "^0.11.0",
+        "@ffmpeg/ffmpeg": "^0.11.6",
+        "bcrypt": "^5.1.0",
+        "connect-mongo": "^4.6.0",
+        "dotenv": "^16.0.3",
+        "express": "^4.18.2",
+        "express-flash": "^0.0.2",
+        "express-session": "^1.17.3",
+        "mongoose": "^6.8.4",
+        "morgan": "^1.10.0",
+        "multer": "^1.4.5-lts.1",
+        "node-fetch": "^2.6.1",
+        "pug": "^3.0.2",
+        "regenerator-runtime": "^0.13.11"
+    },
+    "devDependencies": {
+        "@babel/cli": "^7.21.0",
+        "@babel/core": "^7.21.0",
+        "@babel/node": "^7.20.7",
+        "@babel/preset-env": "^7.20.2",
+        "babel-loader": "^9.1.2",
+        "css-loader": "^6.7.3",
+        "mini-css-extract-plugin": "^2.7.2",
+        "nodemon": "^2.0.20",
+        "sass": "^1.58.0",
+        "sass-loader": "^13.2.0",
+        "style-loader": "^3.3.1",
+        "webpack": "^5.75.0",
+        "webpack-cli": "^5.0.1"
+    }
 }
