--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "dependencies": {
         "@ffmpeg/core": "^0.11.0",
         "@ffmpeg/ffmpeg": "^0.11.6",
-        "aws-sdk": "^2.1145.0",
+        "aws-sdk": "~2.895.0",
+        "multer": "~1.4.2",
+        "multer-s3": "~2.9.0",
         "bcrypt": "^5.1.0",
         "connect-mongo": "^4.6.0",
         "dotenv": "^16.0.3",
@@ -32,8 +34,6 @@
         "express-session": "^1.17.3",
         "mongoose": "^6.8.4",
         "morgan": "^1.10.0",
-        "multer": "^1.4.5-lts.1",
-        "multer-s3": "^2.10.0",
         "node-fetch": "^2.6.1",
         "nodemon": "^2.0.20",
         "pug": "^3.0.2",
