--- a/package.json
+++ b/package.json
@@ -36,10 +36,10 @@
         "morgan": "^1.10.0",
         "node-fetch": "^2.6.1",
         "pug": "^3.0.2",
-        "regenerator-runtime": "^0.13.11"
+        "regenerator-runtime": "^0.13.11",
+        "nodemon": "^2.0.20"
     },
     "devDependencies": {
-        "nodemon": "^2.0.20",
         "@babel/cli": "^7.21.0",
         "@babel/core": "^7.21.0",
         "@babel/node": "^7.20.7",
