--- a/package.json
+++ b/package.json
@@ -24,9 +24,8 @@
         "@ffmpeg/core": "^0.11.0",
         "@ffmpeg/ffmpeg": "^0.11.6",
         "aws-sdk": "~2.895.0",
-        "multer": "~1.4.2",
-        "multer-s3": "~2.9.0",
         "bcrypt": "^5.1.0",
+        "busboy": "^1.6.0",
         "connect-mongo": "^4.6.0",
         "dotenv": "^16.0.3",
         "express": "^4.18.2",
@@ -34,10 +33,12 @@
         "express-session": "^1.17.3",
         "mongoose": "^6.8.4",
         "morgan": "^1.10.0",
+        "multer": "~1.4.2",
+        "multer-s3": "~2.9.0",
         "node-fetch": "^2.6.1",
+        "nodemon": "^2.0.20",
         "pug": "^3.0.2",
-        "regenerator-runtime": "^0.13.11",
-        "nodemon": "^2.0.20"
+        "regenerator-runtime": "^0.13.11"
     },
     "devDependencies": {
         "@babel/cli": "^7.21.0",
